--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@
 @tailwind components;
 
 
+  
 
 @tailwind utilities;
 
@@ -11,14 +12,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 /* Navbar */
-.navbar {
-  /* background: #ffffff; */
-  /* height: 80px; */
-  /* display: flex; */
-  /* justify-content: center; */
-  /* align-items: center; */
-  /* font-size: 1.2rem; */
-}
+/* .navbar {
+  background: #ffffff;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+} */
 
 /* .navbar-logo {
   color: #fff;
@@ -45,20 +46,20 @@
   margin-right: 2rem;
 }
 
-.nav-item {
+/* .nav-item {
   display: flex;
   align-items: center;
   height: 80px;
-}
+} */
 
-.nav-links {
+/* .nav-links {
   color: white;
   text-decoration: none;
   padding: 0.5rem 1rem;
-}
+} */
 
 .nav-links:hover {
-  background-color: #1888ff;
+  /* background-color: #1888ff; */
   border-radius: 4px;
   transition: all 0.2s ease-out;
 }
@@ -84,7 +85,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 90vh;
+    height: 50vh;
     position: absolute;
     top: 80px;
     left: -100%;
@@ -93,14 +94,15 @@
   }
 
   .nav-menu.active {
-    background: #d36c18;
+    background: #000000;
     left: 0;
     opacity: 1;
-    transition: all 0.5s ease;
+    transition: all 0.9s ease;
     z-index: 1;
+    height: auto;
   }
 
-  .nav-links {
+  /* .nav-links {
     text-align: center;
     padding: 2rem;
     width: 100%;
@@ -110,7 +112,7 @@
   .nav-links:hover {
     background-color: #1888ff;
     border-radius: 0;
-  }
+  } */
 
   .navbar-logo {
     position: absolute;
@@ -141,7 +143,7 @@
     margin: 2rem auto;
     border-radius: 4px;
     width: 80%;
-    background: #1888ff;
+    background: #b90633;
     text-decoration: none;
     color: #fff;
     font-size: 1.5rem;
@@ -149,7 +151,7 @@
 
   .nav-links-mobile:hover {
     background: #fff;
-    color: #1888ff;
+    color: #38da10;
     transition: 250ms;
   }
 
