--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@
 }
 
 .navItem {
-  @apply flex items-center text-sm hover:border-b-2 hover:border-blue-600 p-2 mx-auto text-blue-600;
+  @apply flex items-center text-sm hover:border-b-2 hover:border-blue-600 p-2 mx-auto md:text-blue-600 text-white;
 }
   
 
