--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@
 }
 
 .navItem {
-  @apply flex items-center text-sm hover:border-b-2 hover:border-blue-600 p-2 mx-auto md:text-blue-600 text-white;
+  @apply flex items-center text-sm py-5 font-bold tracking-wide sm:font-normal hover:border-b-2 hover:border-blue-600 p-2 mx-auto sm:text-blue-600 text-white;
 }
   
 
@@ -58,7 +58,7 @@
   height: 11vh;
   top: 80px;
   opacity: 1;
-  transition: all 0.5s ease;
+  transition: all 0.3s ease;
 }
 
 /* .nav-item {
@@ -100,21 +100,22 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 50vh;
+    height: 100vh;
     position: absolute;
-    top: 80px;
+    top: 100px;
     left: -100%;
     opacity: 1;
-    transition: all 0.5s ease;
+    transition: all 0.3s ease;
   }
 
   .nav-menu.active {
-    background: #000000d7;
+    background: #000000f1;
     left: 0;
+    top: 100px;
     opacity: 1;
-    transition: all 0.9s ease;
+    transition: all 0.3s ease;
     z-index: 1;
-    height: auto;
+    height: 100%;
     padding: 30px;
   }
 
@@ -130,19 +131,19 @@
     border-radius: 0;
   } */
 
-  .navbar-logo {
+  /* .navbar-logo {
     position: absolute;
     top: 0;
     left: 0;
     transform: translate(25%, 50%);
-  }
+  } */
 
   .menu-icon {
     display: block;
     position: absolute;
     top: 0;
     right: 0;
-    transform: translate(-100%, 60%);
+    transform: translate(-100%, 50%);
     font-size: 1.8rem;
     cursor: pointer;
   }
@@ -152,7 +153,7 @@
     font-size: 2rem;
   }
 
-  .nav-links-mobile {
+  /* .nav-links-mobile {
     display: block;
     text-align: center;
     padding: 1.5rem;
@@ -163,17 +164,17 @@
     text-decoration: none;
     color: #fff;
     font-size: 1.5rem;
-  }
+  } */
 
-  .nav-links-mobile:hover {
+  /* .nav-links-mobile:hover {
     background: #fff;
     color: #38da10;
     transition: 250ms;
-  }
+  } */
 
-  button {
+  /* button {
     display: none;
-  }
+  } */
 }
 
 /* Dropdown */
