--- a/styles/globals.css
+++ b/styles/globals.css
@@ -115,7 +115,7 @@
     opacity: 1;
     transition: all 0.3s ease;
     z-index: 1;
-    height: 100%;
+    /* height: 100%; */
     padding: 30px;
   }
 
