--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 @tailwind base;
+
+.breaks {
+  @apply bg-yellow-300 sm:bg-red-500 md:bg-green-600 lg:bg-blue-500 xl:bg-pink-500 2xl:bg-gray-700;
+}
+
 @tailwind components;
+
 @tailwind utilities;
